--- a/page_transition_effect/css/style.css
+++ b/page_transition_effect/css/style.css
@@ -293,3 +293,30 @@ a {
 .st-color p {
     color: rgba(255, 255, 255, 0.8);
 }
+/*RWD*/
+
+@media screen and (max-width: 520px) {
+    .st-panel h2 {
+        font-size: 42px;
+    }
+    .st-panel p {
+        width: 90%;
+        left: 5%;
+        margin-top: 0;
+    }
+
+    .st-container > a{
+        font-size: 13px;
+    }
+
+    .st-desc{
+        width: 120px;
+        height: 120px;
+        margin-left: -60px;
+    }
+
+    [data-icon]:after{
+        font-size: 60px;
+        transform: rotate(-45deg) translateY(15%);
+    }
+}
